# Trial-Simulations

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: DATA_SOURCES.md
data/processed/: README.md
data/raw/: README.md
docs/: methodology.md  paper.md
notebooks/: 00_data_profiling.ipynb  01_validation_report.ipynb  02_real_data_profiling.ipynb
scripts/: build_paper.py  diagnose_os_subsequent_therapy.py  export_submission_figures.py  plot_fig4_landmark_reversal.py  profile_trials.py  robustness_analysis.py  run_demo.py  run_real_data_validation.py  verify_baseline.py
src/vca/: __init__.py  _km.py
src/vca/data_processing/: __init__.py  clinicaltrials.py  pds_trials.py  project_data_sphere.py  sas.py  schema.py  seer.py  synthetic.py
src/vca/models/: __init__.py  base.py  baseline.py  preprocessing.py  tgi_survival.py
src/vca/product/: __init__.py  app.py  cli.py  power.py
src/vca/validation/: __init__.py  external.py  metrics.py  pipeline.py  profiling.py  survival.py
src/vca/viz/: __init__.py  plots.py
tests/: conftest.py  test_clinicaltrials.py  test_external.py  test_interface_contract.py  test_km.py  test_metrics.py  test_models_baseline.py  test_pds_trials.py  test_preprocessing.py  test_schema.py  test_survival.py  test_synthetic.py
